--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,16 @@ MAX_FILE_SIZE=5242880
 # Admin Credentials
 ADMIN_EMAIL=admin@campusmart.com
 ADMIN_PASSWORD=admin123
+ 
+# SMTP (Nodemailer) - Gmail configuration
+# Set SMTP_PASS to your 16-character Gmail App Password (no spaces)
+SMTP_SERVICE=gmail
+SMTP_USER=shwetamprajapati@gmail.com
+SMTP_PASS=ruadrabmfshvpfcz
+SMTP_SECURE=true
+# Optional: set a friendly sender name; must match your Gmail address
+SMTP_FROM="Campus Mart <shwetamprajapati@gmail.com>"
+# Security: disallow insecure connections unless explicitly needed
+SMTP_ALLOW_INSECURE=false
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
