--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,10 @@ PORT=3001
 RAZORPAY_KEY_ID=rzp_test_RLapZyPB62gRTO
 RAZORPAY_KEY_SECRET=KQEybRflJqWZQYDIiCZsG7jx
 
+# Payments
+# Leave empty to use Razorpay gateway (no offline fallback)
+PAYMENT_FALLBACK_MODE=
+
 # File Upload
 MAX_FILE_SIZE=5242880
 
